--- a/views/wheel/index.ejs
+++ b/views/wheel/index.ejs
@@ -43,7 +43,7 @@
                                         <li>Noritake: 216457 ATAU 171717-1</li>
                                         <li>KGW: SR986871C-4</li>
                                         <li>Asahi: 0011541392-02</li>
-                                        <li>Adamas: 63596</li>
+                                        <li>Adamas: 63596 ATAU 63586-1</li>
                                     </ul>
                                 </div>
                             </div>
@@ -58,6 +58,10 @@
                             <input id="batchNo" type="text" name="batchNo"  placeholder="Batch Number" class="form-control" pattern="(\s*|\d){0,2}" title="Only empty field or numbers with maximum length of 2 is allowed!">
                         </div>
                         <div class="col-auto">
+                            <label class="sr-only" for="machine">Machine</label>
+                            <input id="machine" type="text" name="machine"  placeholder="Machine" class="form-control" required>
+                        </div>
+                        <div class="col-auto">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
@@ -69,17 +73,22 @@
             <div class="content table-responsive table-full-width">
                 <table class="table table-striped table-hover">
                   <thead>
-                    <tr>
+                    <tr style="text-align: center;">
                       <th>Serial Number - Batch No</th>
+                      <th></th>
                       <th># of Ingots</th>
+                      <th>Machines</th>
+                      <th></th>
+                      <th>Status</th>
                       <th></th>
                     </tr>
                   </thead>
                   
+                   <!-- The class here is to allow a static class to be present so that future data added, the form will have the submit/click event listener attached as well -->
                   <tbody class="tableBody">
                     <% if (data.length >0){ %>
                       <% data.forEach(function(val){ %>
-                        <tr> 
+                        <tr style="text-align: center;" > 
                             <td><a href="/wheels/<%=val._id%>/ingots"> <%= val.serialNo %> - <%= val.batchNo %> </a>
                                 <!-- AJAX EDIT WHEEL -->
                                 <form action="/wheels/<%=val._id%>/?_method=PUT" method="POST" class="editWheelForm" autocomplete="off">
@@ -98,9 +107,40 @@
                                     </div>
                                 </form>
                             </td>
-                            <td>Number of Ingots</td>
                             <td>
-                                <button class="btn btn-warning btn-sm editWheelButton">Edit</button>
+                                <button class="btn btn-warning btn-sm editWheelButton">Edit Wheel</button>
+                            </td>
+                            <td><%= val.count %></td>
+                            <td>
+                                <% if (!val.machine) { %>
+                                    <%= "" %>
+                                <% } else { %>
+                                    <%= val.machine %>
+                                <% } %>
+                                <!-- AJAX EDIT MACHINE -->
+                                <form action="/wheels/<%=val._id%>/?_method=PUT" method="POST" class="editMachineForm" autocomplete="off">
+                                    <div class="form-row align-items-center">
+                                        <div class="col-auto">
+                                            <label class="sr-only" for="machine">Machine</label>
+                                            <input id="machine" type="text" name="machine" value="<%=val.machine%>" class="form-control">
+                                        </div>
+                                        <div class="col-auto">
+                                            <button type="submit" class="btn btn-primary">Update</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </td>
+                            <td>
+                                <button class="btn btn-warning btn-sm editMachineButton">Edit Machine</button>
+                            </td>
+                            <td>
+                                <% if (!val.isCompleted) { %>
+                                    <%= "Incomplete" %>
+                                <% } else { %>
+                                    <%= "Completed" %>
+                                <% } %>
+                            </td>
+                            <td>
                                 <% if(currentUser && currentUser.isAdmin) { %>
                                     <form style="display:inline" method="POST" action="/wheels/<%=val._id%>" class="deleteWheelForm" autocomplete="off">
                                             <button type="submit" class="btn btn-danger btn-sm" >Delete</button>
@@ -126,13 +166,13 @@
         <% if (current == 1) { %>
             <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">First</a></li>
             <% } else { %>
-            <li class="page-item"><a class="page-link" href="/ingots<%if(search){%>?search=<%=search%><%}%>">First</a></li>
+            <li class="page-item"><a class="page-link" href="/wheels<%if(search){%>?search=<%=search%><%}%>">First</a></li>
         <% } %>
         
         <% if (current == 1) { %>
             <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
         <% } else { %>
-            <li class="page-item"><a class="page-link" href="/ingots?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">&laquo;</a></li>
+            <li class="page-item"><a class="page-link" href="/wheels?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">&laquo;</a></li>
         <% } %>
         
         <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
@@ -145,7 +185,7 @@
             <% if (i == current) { %>
                 <li class="page-item active"><a class="page-link"><%= i %></a></li>
             <% } else { %>
-                <li class="page-item"><a class="page-link" href="/ingots?page=<%= i %><%if(search){%>&search=<%=search%><%}%>"><%= i %></a></li>
+                <li class="page-item"><a class="page-link" href="/wheels?page=<%= i %><%if(search){%>&search=<%=search%><%}%>"><%= i %></a></li>
             <% } %>
             
             <% if (i == Number(current) + 4 && i < pages) { %>
@@ -156,13 +196,13 @@
         <% if (current == pages) { %>
             <li class="page-item disabled"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
         <% } else { %>
-            <li class="page-item"><a class="page-link" href="/ingots?page=<%= Number(current) + 1 %><%if(search){%>&search=<%=search%><%}%>">&raquo;</a></li>
+            <li class="page-item"><a class="page-link" href="/wheels?page=<%= Number(current) + 1 %><%if(search){%>&search=<%=search%><%}%>">&raquo;</a></li>
         <% } %>
         
         <% if (current == pages) { %>
             <li class="page-item disabled"><a class="page-link" href="#">Last</a></li>
         <% } else { %>
-            <li class="page-item"><a class="page-link" href="/ingots?page=<%= pages %><%if(search){%>&search=<%=search%><%}%>">Last</a></li>
+            <li class="page-item"><a class="page-link" href="/wheels?page=<%= pages %><%if(search){%>&search=<%=search%><%}%>">Last</a></li>
         <% } %>
     
     </ul>
@@ -181,9 +221,14 @@
 
 </body>
 
+<!--   Core JS Files   -->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
 <script src="/jQuery/jquery-3.3.1.min.js"></script>
 <script src="/bootstrap-4.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
+<!--User defined JS-->
 <script src="/ajax/index.js"></script>
 
 </html>
