--- a/views/wheel/ingotLists.ejs
+++ b/views/wheel/ingotLists.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <body>
-    <a href="/wheels" class="btn btn-outline-primary btn-lg">Back</a>
+    <a href="/wheels" class="btn btn-outline-primary btn-lg" style="float:left";>Back</a>
 
     <div class="ingotHeader">
         <h1><span><%= data[0].serialNo %></span> - <span><%= data[0].batchNo %></span></h1>
@@ -11,11 +11,17 @@
             <label for="isCompleted">Wheel Habis Pakai</label>
         </div>
         <h5 class="blinking">Sila tandakan box atas hanya jika wheel <strong>habis terpakai</strong></h5>
+
+        <div class="notice info">
+            <p>Jika dengan keyboard, ingot tersebut perlu ikut format</p>
+            <p><strong>XXX 000-00000</strong> atau <strong>XXXX000-00000</strong></p>
+        </div>
+
     </div>
     
     <section class="addIngots">
         <label class="sr-only" for="ingot">Ingot</label>
-        <input id="ingot" type="text" placeholder="Barcode Scan Ingot Here" autofocus>
+        <input id="ingot" type="text" placeholder="Barcode Scan Ingot Here" maxlength=13 autofocus>
     </section>
   
     <ul class="list">
@@ -29,9 +35,14 @@
 
 </body>
 
+<!--   Core JS Files   -->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
 <script src="/jQuery/jquery-3.3.1.min.js"></script>
 <script src="/bootstrap-4.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
+<!--User defined JS-->
 <script src="/ajax/ingotLists.js"></script>
 
 </html>
